@@ -4,7 +4,7 @@ from setuptools import setup, find_packages
 
 setup(
     name='CorpusTools',
-    version='0.6.0',
+    version='0.7.0',
     author='Børre Gaup',
     author_email='borre.gaup@uit.no',
     packages=find_packages(),
@@ -16,12 +16,15 @@ setup(
                             'analyse_corpus = corpustools.analyser:main',
                             'convert2xml = corpustools.converter:main',
                             'parallelize = corpustools.parallelize:main',
-                            'pick_sd_se = corpustools.pick_samediggi_se_docs:main']
+                            'pick_sd_se = corpustools.pick_samediggi_se_docs:main',
+                            'add_files_to_corpus = corpustools.namechanger:adder_main']
     },
     install_requires=[
         "pyth",
         "pytidylib",
         "beautifulsoup4",
+        "unidecode",
+        "lxml"
     ],
     test_suite = 'nose.collector',
     include_package_data=True,
