@@ -15,3 +15,4 @@ v<0.3.6>, <20140329> -- Handle hyph tags
 v<0.4.0>, <20140507> -- Convert .doc by using docbook-xsl-ns -> html -> our xml
 v<0.5.0>, <20140507> -- Change the way Avvir xml files are converted
 v<0.5.1>, <20140821> -- Change the way newstags are handled
+v<0.7.0>, <20141008> -- Add add_files_to_corpus script, a script to add files in a given directory to a given corpus
